fix(attachment): keep center alignment if element has bigger height

--- a/packages/components/_provisional/src/attachment/styles/index.module.scss
+++ b/packages/components/_provisional/src/attachment/styles/index.module.scss
@@ -15,6 +15,7 @@ $spacing: theme.get-spacing();
   display: flex;
   min-height: $size;
   align-items: center;
+  justify-content: center;
   padding: $spacing;
   gap: $spacing;
 }
